# libtheora

./: .cvsignore  AUTHORS  Makefile.am  Makefile.in  README  REPOSITORY_HAS_MOVED  SConstruct  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  index.html  params.json
debian/: control  copyright  libtheora0.install
doc/: Makefile.am  Makefile.in  draft-barbato-avt-rtp-theora-01.xml  draft-ietf-avt-rtp-theora-00.xml  spec.html  spec.py  spec.txt  vp3-format.txt
doc/spec/: Makefile.in  spec.tex
examples/: .cvsignore  Makefile.am  Makefile.in  README_SPLAYER  dump_video.c  encoder_example.c  player_example.c  png2theora.c  splayer.c
include/: Makefile.in
include/theora/: Makefile.in  theora.h
lib/: Makefile.am  Makefile.in  analyze.c  block_inline.h  blockmap.c  comment.c  compglobals.c  cpu.c  dct.c  dct_decode.c  dct_encode.c  decint.h  decode.c  dsp.h  encfrag.c  encint.h  encode.c  encoder_internal.h  encoder_lookup.h  enquant.c  enquant.h  fragment.c  frarray.c  frinit.c  huffdec.c  huffman.c  huffman.h  hufftables.h  idct.c  internal.c  internal.h  mathops.c  mcenc.c  mcomp.c  mcomp.h  misc_common.c  pb.c  pp.c  pp.h  quant.c  (+9 more)
lib/arm/: armbits.s  armfrag.s  armidct.s  armint.h  armloop.s  armopts.s.in  armstate.c
lib/c64x/: c64xdec.c  c64xdec.h  c64xfrag.c  c64xidct.c  c64xint.h  c64xstate.c
lib/x86/: cpu.c  cpu.h  mmxencfrag.c  mmxidct.c  mmxstate.c  sse2encfrag.c  sse2idct.c  sse2trans.h  x86enc.c  x86enc.h  x86enquant.c  x86int.h  x86state.c
lib/x86_32/: dsp_mmx.c  dsp_mmxext.c  fdct_mmx.c  recon_mmx.c
lib/x86_vc/: cpu.c  mmxencfrag.c  mmxstate.c  x86enc.c  x86int.h  x86state.c
m4/: Makefile.am  Makefile.in
macosx/Theora.xcodeproj/: project.pbxproj
tests/: Makefile.in
win32/: theora_static.dsp
win32/experimental/encoderwin/: ReadMe.txt  encoderwin.c  encoderwin.dsp
win32/experimental/splayer/: pastreamio.c  pastreamio.h  splayer.c  splayer.dsp
win32/experimental/transcoder/: transcoder.dsp  transcoder_example.c
win32/experimental/transcoder/avi2vp3/: avi2vp3.c
win32/experimental/wincompat/: getopt.c  getopt_long.c
